commands enabled in preamble to compile math-toolbox pdf

--- a/preambule/maths.tex
+++ b/preambule/maths.tex
@@ -10,8 +10,8 @@
 %\newcommand{\defby}{\doteq}   % defined by
 \newcommand{\diff}{\Delta}     % difference operator
 %
-\let\oldsqrt\sqrt
-\renewcommand{\sqrt}[1]{\left({#1}\right)^{\tfrac{1}{2}}} % sqrt
+%\let\oldsqrt\sqrt
+%\renewcommand{\sqrt}[1]{\left({#1}\right)^{\tfrac{1}{2}}} % sqrt
 %
 \newcommand{\eqtxt}[1]{\text{[{#1}]}} % text in equations
 \newcommand{\txt}[1]{_\text{#1}}      % text as subscript in variables
