--- a/preambule/preambule.tex
+++ b/preambule/preambule.tex
@@ -6,7 +6,7 @@
 \RequirePackage{amsfonts}
 \RequirePackage{amssymb}
 \RequirePackage{amsthm}
-%\RequirePackage{booktabs}
+\RequirePackage{booktabs}
 %\RequirePackage{bm}
 %\RequirePackage{comment}
 \RequirePackage{fixltx2e}
@@ -14,7 +14,7 @@
 %\geometry{a4paper}
 %\RequirePackage{graphicx}       % graphs and figures
 \RequirePackage[utf8x]{inputenc} % utf8 encoding in source file
-%\RequirePackage{lscape}         % landscape environment
+\RequirePackage{lscape}         % landscape environment
 \RequirePackage{mathtools}
 %\RequirePackage{marginnote}      % \marginnote
 \RequirePackage[version=3]{mhchem}
@@ -25,7 +25,7 @@
 %\RequirePackage[parfill]{parskip}            % paragraphs without indent
 \RequirePackage[draft, scrtime]{prelim2e} % Final and draft versions
 \RequirePackage{siunitx}
-%\RequirePackage{tabularx}
+\RequirePackage{tabularx}
 %\RequirePackage{textcase}       % \MakeTextUppercase
 %\RequirePackage[normalem]{ulem} % underlines
 \RequirePackage{xspace}
