--- a/transport/sections/notation.tex
+++ b/transport/sections/notation.tex
@@ -8,6 +8,8 @@
 \item n-dim set: nset nA, $\nset nA$.
 \item n-dim. Euclidean space: espace n, $\espace n$.
 \item region: region A, $\region A$.
+\item elements of a set. elset(a,b,c), $\elset{a,b,c}$.
+\item tulpe. tuple(a,b,c), $\tuple{a,b,c}$.
 \end{itemize}
 
 
@@ -22,6 +24,9 @@
 \item boundary: bound, $\bound$.
 \item surface: surf, $\surf$.
 \item volume: vol, $\vol$.
+\item diameter: diam, $\diam$.
+\item length: length, $\length$.
+\item radius: radius, $\radius$.
 \end{itemize}
 
 
@@ -103,6 +108,10 @@
 \item position: pos, $\pos$.
 \item pressure: press, $\press$.
 %\item value at time and position: vattpos, $\vattpos$.
+\item velocity: vel, $\vel$.
+\item acceleration due to gravity: grav, $\grav$.
+\item force: force, $\force$.
+\item drag (force): drag, $drag$.
 \end{itemize}
 
 
@@ -139,6 +148,12 @@
 \item chemical reaction thermal energy: chthen, $\chthen$.
 \end{itemize}
 
+\subsubsection{Momentum transport}
+\begin{itemize}
+\item dynamic viscosity: dynvis, $\dynvis$.
+\item kinematic viscosity: kinvis, $\kinvis$.
+\end{itemize}
+
 
 \subsubsection{Waves}
 \begin{itemize}
@@ -162,7 +177,9 @@
 \begin{itemize}
 \item units of a physical quantity: unit q, $\unit q$.
 \item dimension of a physical quantity: dim q, $\dim q$.
+\item physical dimension: phdim L, $\phdim L$.
+\item physical dimension of temperature: phdimtemp, $\phdimtemp$.
 \item dimensionless quantity: kdim, $\kdim$.
 \item Biot number: kbiot, $\kbiot$.
+\item Reynolds number: kreynolds, $\kreynolds$.
 \end{itemize}
-
