velocity symbol changed from v to u

--- a/transport/preambule/physics.tex
+++ b/transport/preambule/physics.tex
@@ -4,7 +4,7 @@
 %
 \newcommand{\pos}{\xi} % position
 \newcommand{\press}{p} % pressure
-\newcommand{\vel}{v}   % velocity
+\newcommand{\vel}{u}   % velocity
 \newcommand{\grav}{g}  % acceleration due to gravity
 \newcommand{\force}{f} % force
 %
