--- a/transport/sections/notation.tex
+++ b/transport/sections/notation.tex
@@ -22,6 +22,7 @@
 \subsubsection{Geometric objects}
 \begin{itemize}
 \item boundary: bound, $\bound$.
+\item area: area, $\area$.
 \item surface: surf, $\surf$.
 \item volume: vol, $\vol$.
 \item diameter: diam, $\diam$.
@@ -112,6 +113,9 @@
 \item acceleration due to gravity: grav, $\grav$.
 \item force: force, $\force$.
 \item drag (force): drag, $drag$.
+\item buoyancy (force): buoy, $\buoy$.
+\item shear stress: shear, $\shear$.
+\item surface tension: surftens, $\surftens$.
 \end{itemize}
 
 
@@ -128,6 +132,7 @@
 \item specific heat capacity: kshcap, $\kshcap$.
 \item thermal diffusivity: kthdiff, $\kthdiff$.
 \item thermal conductivity: kthcond, $\kthcond$.
+\item coefficient of thermal expansion: kthexp, $\kthexp$.
 \item local film (heat transfer) coefficient (thermal convection): kthconv, $\kthconv$.
 \item global (average) film coefficient: kavthconv, $\kavthconv$.
 \item time constant (conduction-convection lumped solution): ktime, $\ktime$.
@@ -146,6 +151,7 @@
 \item mass: mass, $\mass$.
 \item mass density: dens, $\dens$.
 \item chemical reaction thermal energy: chthen, $\chthen$.
+\item mass concentration: conc, $\conc$.
 \end{itemize}
 
 \subsubsection{Momentum transport}
@@ -180,6 +186,17 @@
 \item physical dimension: phdim L, $\phdim L$.
 \item physical dimension of temperature: phdimtemp, $\phdimtemp$.
 \item dimensionless quantity: kdim, $\kdim$.
+\item characteristic physical quantity: chpq, $\chpq\vel$.
+\item scaled physical quantity: scpq, $\scpq\vel$.
 \item Biot number: kbiot, $\kbiot$.
 \item Reynolds number: kreynolds, $\kreynolds$.
+\item Prandtl number: kprandtl, $\kprandtl$.
+\item Schmidt number: kschmidt, $\kschmidt$.
+\item Peclet number: kpeclet, $\kpeclet$.
+\item Grashof number: kgrashof, $\kgrashof$.
+\item Rayleigh number: krayleigh, $\krayleigh$.
+\item Weber number: kweber, $\kweber$.
+\item Capillar number: kcapillar, $\kcapillar$.
+\item Bond number: kbond, $\kbond$.
+\item Froud number: kfroud, $\kfroud$.
 \end{itemize}
