--- a/transport/transport.tex
+++ b/transport/transport.tex
@@ -11,6 +11,7 @@
 \tableofcontents
 %
 \input{./sections/dim-analysis}
+\input{./sections/dimless-quantities}
 \input{./sections/energy-transport}
 %
 \appendix
