--- a/transport/sections/dimless-quantities.tex
+++ b/transport/sections/dimless-quantities.tex
@@ -151,5 +151,5 @@ A fluid is flowing through a pipe, which is heated from outside. The temperature
 \begin{solution}
 The first step is to collect the set of variables on which the thermal flux $\flux\then$ can depend. This can depend on the thermal properties of the fluid, the conductivity $\kthcond$ and the specific heat $\kshcap_\press$, the difference in temperature between the fluid and the wall $\Dx\temp$, the flow properties of the fluid, the density $\dens$, dynamic viscosity $\dynvis$, the average fluid velocity $\vel$, the diameter of the pipe $\diam$ and the length of pipe $\length$. The fundamental dimensions that we can classify these into are $\elset{\phdim M, \phdim L, \phdim T, \phdimtemp}$.
 
-There are nine dimensionless groups and four dimensions in table 1.3, ap- parently necesitating five dimensionless groups. However, a further reduction is possible when there is no interconversion between heat energy (which is being transferred) and mechanical energy (which is driving the flow). In this case, it is possible to consider heat energy as a dimension H which is different from mechanical energy. There are now five dimensions, H, M, L, T and Υ, and a total of nine dimensional quantities in table 1.3. Therefore, there are only four dimensionless groups.
+%There are nine dimensionless groups and four dimensions in table 1.3, ap- parently necesitating five dimensionless groups. However, a further reduction is possible when there is no interconversion between heat energy (which is being transferred) and mechanical energy (which is driving the flow). In this case, it is possible to consider heat energy as a dimension H which is different from mechanical energy. There are now five dimensions, H, M, L, T and Υ, and a total of nine dimensional quantities in table 1.3. Therefore, there are only four dimensionless groups.
 \end{solution}
