style changes, vars added, section added

--- a/transport/sections/energy-transport.tex
+++ b/transport/sections/energy-transport.tex
@@ -1,4 +1,4 @@
-\section{Energy transport}
+\section{Energy Transport}
 %%%
 \epigraph{People goes to high place, water flows to low place}{Junping Shi}
     {Partial Differential Equations and Mathematical Biology}
