--- a/transport/sections/notation.tex
+++ b/transport/sections/notation.tex
@@ -116,6 +116,8 @@
 \item buoyancy (force): buoy, $\buoy$.
 \item shear stress: shear, $\shear$.
 \item surface tension: surftens, $\surftens$.
+\item frequency: freq, $\freq$.
+\item power: power, $\power$.
 \end{itemize}
 
 
@@ -199,4 +201,7 @@
 \item Capillar number: kcapillar, $\kcapillar$.
 \item Bond number: kbond, $\kbond$.
 \item Froud number: kfroud, $\kfroud$.
+\item Nusselt number: knusselt, $\knusselt$.
+\item Sherwood number: ksherwood, $\ksherwood$.
+\item power number: kpower, $\kpower$.
 \end{itemize}
