--- a/transport/preambule/physics.tex
+++ b/transport/preambule/physics.tex
@@ -21,6 +21,7 @@
 %
 \newcommand{\temp}{\theta}       % temperature
 \newcommand{\then}{e}            % thermal energy (heat)
+\newcommand{\thendens}{\epsilon} % thermal energy density (E/L^3)
 \newcommand{\work}{w}
 %
 \newcommand{\ien}{i}                   % internal energy
