--- a/transport/sections/notation.tex
+++ b/transport/sections/notation.tex
@@ -127,6 +127,7 @@
 \item flow: flow q, $\flow q$.
 \item flux: flux q, $\flux q$.
 \item thermal energy (heat): then, $\then$.
+\item thermal energy density: thendens, $\thendens$.
 \item mechanical work: work, $\work$.
 \item internal energy: ien, $\ien$.
 \item accumulation (\eg, internal energy): accu ien, $\accu\ien$.
