--- a/transport/sections/dimless-quantities.tex
+++ b/transport/sections/dimless-quantities.tex
@@ -1,28 +1,31 @@
 \section{Dimensionless Quantities}
-Dimensionless groups can be classified into three broad categories, the dimensionless fluxes, the ratios of convection and diffusion and the ratios of different types of diffusion. Before proceeding to define dimensionless groups, we first define the diffusion coefficients for mass, momentum and energy, in order to provide a definite basis for the discussion. Here, we restrict ourselves to the macroscopic definition.
+Dimensionless groups can be classified into three broad categories: the dimensionless fluxes, the ratios of convection and diffusion and the ratios of different types of diffusion. Before proceeding to define dimensionless quantities, we first define the diffusion coefficients for mass, momentum and energy, in order to provide a definite basis for the discussion. Here, we restrict ourselves to the macroscopic definition.
 
 
 \subsection{Mass, momentum and energy diffusivities}
-The fundamental constitutive relations in transport processes are the Fick's law for mass diffusion, Fourier's law for heat conduction and Newton's law for viscosity. The respective diffusion coefficients can be defined as follows.
+The fundamental constitutive relations~\footnote{~A constitutive relation is a relation between two physical quantities (especially kinetic quantities as related to kinematic quantities) that is specific to a material or substance, and approximates the response of that material to external stimuli, usually as applied fields or forces. They are combined with other equations governing physical laws to solve physical problems; \eg, in fluid mechanics the fluid flow in a pipe, in solid state physics the response of a crystal to an electric field or, in structural analysis, the connection between applied stresses or forces to strains or deformations. 
+
+Some constitutive equations are simply phenomenological; others are derived from first principles. A common approximate constitutive equation frequently is expressed as a simple proportionality using a parameter taken to be a property of the material, such as electrical conductivity or a spring constant. However, it is often necessary to account for the directional dependence of the material, and the scalar parameter is generalized to a tensor. Constitutive relations are also modified to account for the rate of response of materials and their non-linear behavior.} in transport processes are the Fick's law for mass diffusion, Fourier's law for heat conduction and Newton's law for viscosity. The respective diffusion coefficients can be defined as follows.
 %
 \begin{itemize}
 \item When there is a concentration difference maintained across a slab of fluid, then there is transfer of mass from the surface at higher concentration to the surface at lower concentration. The mass flux (mass per unit area per unit time) is inversely proportional to the length and directly proportional to the difference in concentration or temperature across the material. If a concentration difference $\Dx\conc$, $\dim\conc = \phdim M/\phdim L^3$, is maintained between two ends of a slab of length $\length$, the mass flux $\flux\mass$, $\dim\flux\mass = \phdim M/\phdim L^2\phdim T$, is given by Fick's law:
 \beq
-\flux\mass = -\kdiff \dfrac{\Dx\conc}{\length}\,.
+\flux\mass = -\kdiff \dfrac{\Dx\conc}{\length}\,,
 \eeq
+where $\kdiff$ is the diffusivity, $\dim\kdiff = \phdim L^2/\phdim T$.
 Here, the negative sign indicates that mass is transferred from the region of higher concentration to the region of lower concentration.
 %
 \item For the transport of thermal energy, the energy flux is related to the temperature difference by Fourier's law. For a slab of material of length $\length$ with a temperature difference $\Dx\temp$ across the material, the energy flux $\flux\then$ is given by
 \beq
 \flux\then = -\kthcond\dfrac{\Dx\temp}{\length}\,,
 \eeq
-where $\kthcond$ is the thermal conductivity, and the negative sign indicates that thermal energy is transferred from the region of higher to the region of lower temperature.
+where $\kthcond$ is the thermal conductivity, $\dim\kthcond = \phdim E/\phdim L\phdim T\phdimtemp$, and the negative sign indicates that thermal energy is transferred from the region of higher to the region of lower temperature.
 %
 \item The Newton's law of viscosity relates the shear stress $\shear$ (force per unit area at the wall) to the strain rate (change in velocity per unit length across the flow) for the simple shear flow of a fluid as shown in figure 1.1.2.
 \beq
 \shear_{xy} = \kinvis\dfrac{\Dx\vel_x}{\length}.
 \eeq
-It should be noted that there is no negative sign in Newton's law, in contrast to Fick's law and Fourier's law. This is due to the difference in convention with regard to the definition of stress in fluid mechanics and the definition of fluxes in transport phenomena. The shear stress $\shear_{xy}$ in Newton's law is defined as the force per unit area at a surface in the $x$ direction whose outward unit normal is in the $y$ direction. In contrast, the fluxes are defined as positive if they are directed into the volume. Therefore, the shear stress is actually the negative of the momentum flux. If the stress is defined to the the force per unit area acting at a surface whose inward unit normal is in the $x$ direction, then this would introduce a negative sign in Newton's equation. However, it is conventional in fluid mechanics to define the stress with reference to the outward unit normal to the surface. As we will see later, this difference in convention will not affect the balance equations that are finally obtained for the rate of change of momentum.
+Note that there is no negative sign in Newton's law, in contrast to Fick's law and Fourier's law. This is due to the difference in convention with regard to the definition of stress in fluid mechanics and the definition of fluxes in transport phenomena. The shear stress $\shear_{xy}$ in Newton's law is defined as the force per unit area at a surface in the $x$ direction whose outward unit normal is in the $y$ direction. In contrast, the fluxes are defined as positive if they are directed into the volume. Therefore, the shear stress is actually the negative of the momentum flux. If the stress is defined to the the force per unit area acting at a surface whose inward unit normal is in the $x$ direction, then this would introduce a negative sign in Newton's equation. However, it is conventional in fluid mechanics to define the stress with reference to the outward unit normal to the surface. As we will see later, this difference in convention will not affect the balance equations that are finally obtained for the rate of change of momentum.
 
 In this course, we will adopt the convention of defining the stress $\shear_{xy}$ as the force per unit area in the $x$ direction acting along a surface whose outward unit normal is in the $y$ direction and use the last equation for Newton's law of viscosity.
 \end{itemize}
@@ -47,25 +50,35 @@ The diffusion coefficients are the proportionality constants in the relationship
     }
     {\text{thickness of the material}}
 \eeq
-From dimensional analysis of the above equation, it is easy to see that the diffusion coefficients of all quantities have dimensions of $\phdim L^2/T$. These diffusion coefficients are defined from Fick's law, Fourier's law and Newton's law as follows.
+From dimensional analysis of the above equation, see that the diffusion coefficients of all quantities have dimensions of $\phdim L^2/T$. These diffusion coefficients are defined from Fick's law, Fourier's law and Newton's law as follows.
 
 \begin{enumerate}
-\item From Fick's law, the diffusion coefficient $\kdiff$ is the ratio of mass flux (mass transported per unit area per unit time) and the gradient in the concentration (mass per unit volume). Therefore, the diffusivity of mass is just the diffusion coefficient $\kdiff$.
+\item From Fick's law, the diffusion coefficient $\kdiff$ is the ratio of mass flux (mass transported per unit area per unit time) and the gradient in the concentration (mass per unit volume). Therefore, the mass diffusivity is just the diffusion coefficient $\kdiff$.
 
-\item It is possible to define a diffusion coefficient for heat transfer as follows. The difference in temperature $\Dx\temp$ can be expressed in terms of the difference in the specific energy between the two sides as $\Dx\temp = \Dx\then/\dens\kshcap_v$, where $\Dx\then$ is the specific thermal energy (per unit volume) and $\kshcap_v$ the volumetric thermal capacity. With this, the equation for the thermal flux can be written as
+\item It is possible, on the other hand, to define a diffusion coefficient for thermal transfer as follows. The difference in temperature $\Dx\temp$ can be expressed in terms of the difference in the energy density between the two sides as $\Dx\temp = \Dx\thendens/\dens\kshcap_\vol$, where $\Dx\thendens$ is the thermal energy density (thermal energy per unit volume, $\dim\thendens = \phdim E/\phdim L^3$) and $\kshcap_\vol$ the specific thermal capacity, $\dim\kshcap_\vol = \phdim L^2/\phdim T^2\phdimtemp$. With this, the equation for the thermal flux can be written as
 \beq
-\flux\then = \dfrac{\kthcond}{\dens\kshcap_v}\dfrac{\Dx\then}{\length}\,.
+\flux\then = \dfrac{\kthcond}{\dens\kshcap_\vol}\dfrac{\Dx\thendens}{\length}\,.
 \eeq
-It is obvious that the above equation has the same form as the mass flux equation, with a thermal diffusivity $\kdiff_h = \kthcond/\dens\kshcap_v$, which has $\dim\kdiff_h = \phdim L^2/\phdim T$.
+Note that the above equation has the same form as the mass flux equation, with a thermal diffusivity $\kdiff_h = \kthcond/\dens\kshcap_\vol$, $\dim\kdiff_h = \phdim L^2/\phdim T$.
 
-\item The \lingo{momentum diffusivity} is the relation between the flux of momentum (rate of transport of momentum per unit area per unit time) and the difference in the momentum density (momentum per unit volume). Consider the layer of fluid shown in figure 1.1.2. Since the momentum of a parcel of fluid is the mass of that parcel multiplied by its velocity, the momentum density is the product of the mass density $\dens$ and velocity $\vel_x$. Therefore, the equation for the flux, expressed in terms of the momentum density, is
+\item The \lingo{momentum diffusivity} is the relation between the momentum flux (rate of momentum transport per unit area per unit time) and the difference in the momentum density (momentum per unit volume). Consider the layer of fluid shown in figure 1.1.2. Since the momentum of a fluid parcel is the mass of that parcel multiplied by its velocity, the momentum density is the product of the mass density $\dens$ and velocity $\vel_x$. Therefore, the equation for the flux, expressed in terms of the momentum density, is
 \beq
 \shear_{xy} = \kinvis\dfrac{\Dx(\dens\vel_x)}{\length}\,,
 \eeq
-where $\kinvis$ is the momentum diffusivity. For an incompressible fluid with constant density, the momentum diffusivity is $\kinvis = \dynvis/\dens$. The momentum diffusivity, which has dimensions $\dim\kinvis = \phdim L^2/\phdim T$, is also referred to as the \lingo{kinematic viscosity}.
+where $\kinvis$ is the momentum diffusivity. For an incompressible fluid with constant density, the momentum diffusivity is $\kinvis = \dynvis/\dens$. The momentum diffusivity, $\kinvis$, with $\dim\kinvis = \phdim L^2/\phdim T$, is also referred to as the \lingo{kinematic viscosity}.
 \end{enumerate}
 
-The dimensionless quantities ratios of diffusivities are summarized in \autoref{tab:rationofdiffusivities}.
+Summarizing:
+%
+\begin{itemize}
+\item mass transport: $\flux\mass = -\kdiff\grad\conc$, where mass flux $\dim\flux\mass = \phdim M/\phdim L^2\phdim T$, mass diffusion coefficient $\dim\kdiff = \phdim L^2/\phdim T$ and concentration gradient $\dim\grad\conc = \phdim M/L^4$.
+%
+\item thermal energy transport: $\flux\then = -\kthcond/\dens\kshcap\times$, where thermal energy flux $\dim\flux\then = \phdim E/\phdim L^2\phdim T$, thermal conductivity $\dim\kthcond = \phdim E/\phdim L\phdim T\phdimtemp$, mass density $\dim\dens = \phdim E\phdim T^2/\phdim L^5$, specific thermal capacity $\dim\kshcap = \phdim L^2/\phdim T^2\phdimtemp$ and energy density gradient $\dim\grad\thendens = \phdim E/\phdim L^4$.
+%
+\item momentum transport: $\shear = \kinvis\grad\dens\vel = \dynvis/\dens\grad\dens\vel$, where shear stress $\dim\shear = \phdim F/\phdim L^2$, kinematic viscosity $\dim\kinvis = \dynvis/\dens = \phdim L^2/\phdim T$, mass density $\dim\dens = \phdim F\phdim T^2/\phdim L^4$, velocity $\dim\vel = \phdim L/\phdim T$.
+\end{itemize}
+
+The dimensionless quantities ratios of diffusivities are shown in \cref{tab:rationofdiffusivities}.
 %
 % ------------------------------------------------------------- PreTable
 \docpretable{bt}{0.9\textwidth}{ccl}%
@@ -87,10 +100,14 @@ Peclet number   & $\kpeclet = \vel\length/\kdiff_h$       & thermal convection t
 % ------------------------------------------------------------ EndTable
 
 
-\subsection{Ratio of convection and diffusion}
-Convective transport takes place due to the mean flow of a fluid, even in the absence of a concentration difference. For example, if a fluid with concentration $\conc$ travels with velocity $\vel$ in a pipe, the total amount of mass transported per unit time is ($\conc\vel\area_p$), where $\area_p$ is the cross-sectional area of the tube. Therefore, the flux (mass transported by the fluid, per unit area perpendicular to the flow per unit time) is ($\conc\vel$). Consequently, the ratio between the rate of transport due to convective and diffusive effects is ($\vel\length/\kdiff$), where $\length$ is the length scale across which there is a change in the density of this quantity.
+\subsection{Wording}
+In the present document, the adjective \lingo{density} is used to express a quantity divided by volume; \eg, energy density, $\dim\thendens = \phdim E/\phdim L^3$, and  the adjective \lingo{specific} to express a quantity divided by mass; \eg, specific thermal capacity, $\dim\kshcap_\vol = \phdim L^2/\phdim T^2\phdimtemp$.
 
-The dimensionless numbers which are ratios of convective and diffusive transport rates (\autoref{tab:rationofdiffusivities}) 
+
+\subsection{Ratio of convection and diffusion}
+Convective transport takes place due to the mean flow of a fluid, even in the absence of a concentration difference. For example, if a fluid with concentration $\conc$ travels with velocity $\vel$ in a pipe, then the total amount of mass transported per unit time is $\conc\vel\area_p$, where $\area_p$ is the cross-sectional area of the tube. Therefore, the flux (mass transported by the fluid, per unit area perpendicular to the flow per unit time) is $\conc\vel$. Consequently, the ratio between the rate of transport due to convective and diffusive effects is $\vel\length/\kdiff$, where $\length$ is the length scale across which there is a change in the density of this quantity.
+
+The dimensionless numbers which are ratios of convective and diffusive transport rates, see\cref{tab:rationofdiffusivities}: 
 %
 \begin{itemize}
 \item the Reynolds number, $\kreynolds = \dens\vel\length/\dynvis = \vel\length/\kinvis$, the ratio of momentum convection and diffusion,
@@ -156,7 +173,7 @@ A fluid flows through a pipe heated from the outside. The temperature of the wal
 \begin{solution}
 The first step is to collect the set of variables on which the thermal flux $\flux\then$ may depend. This can depend on the thermal properties of the fluid, the conductivity $\kthcond$, the specific thermal capacity $\kshcap_\press$, the difference in temperature between the fluid and the wall $\Dx\temp$, the flow properties of the fluid, the density $\dens$, dynamic viscosity $\dynvis$, the average fluid velocity $\vel$, the diameter of the pipe $\diam$ and the length of pipe $\length$. The fundamental dimensions that we can classify these quantities into are $\elset{\phdim M, \phdim L, \phdim T, \phdimtemp}$.
 
-There are nine dimensionless groups and four dimensions in \autoref{tab:fluidpipesystem}, apparently necesitating five dimensionless groups. However, a further reduction is possible when \emph{there is no interconversion between thermal energy (being transferred) and mechanical energy (driving the flow)}. In this case, it is possible to consider heat energy as a dimension $\phdim H$, because it is different from mechanical energy. There are now five dimensions, $\elset{\phdim H, \phdim M, \phdim L, \phdim T, \phdimtemp}$, and a total of nine dimensional quantities in \autoref{tab:fluidpipesystem}. Therefore, there are only four dimensionless groups.
+There are nine dimensionless groups and four dimensions in \cref{tab:fluidpipesystem}, apparently necesitating five dimensionless groups. However, a further reduction is possible when \emph{there is no interconversion between thermal energy (being transferred) and mechanical energy (driving the flow)}. In this case, it is possible to consider heat energy as a dimension $\phdim H$, because it is different from mechanical energy. There are now five dimensions, $\elset{\phdim H, \phdim M, \phdim L, \phdim T, \phdimtemp}$, and a total of nine dimensional quantities in \cref{tab:fluidpipesystem}. Therefore, there are only four dimensionless groups.
 %
 % ------------------------------------------------------------- PreTable
 \docpretable{bt}{0.9\textwidth}{ccl}%
@@ -219,7 +236,7 @@ Consider a stirred tank reactor for heterogeneous catalysis, where the reactants
 \end{example}
 
 \begin{solution}
-The different dimensional quantities of relevance are presented in \autoref{tab:masstransfertoparticle}.
+The different dimensional quantities of relevance are presented in \cref{tab:masstransfertoparticle}.
 %
 % ------------------------------------------------------------- PreTable
 \docpretable{bt}{0.9\textwidth}{ccll}%
@@ -245,7 +262,7 @@ Fluid viscosity          & $\dynvis$    & $\phdim M/\phdim L\phdim T$   & \\
 
 The choice of dimensional quantities requires further discussion. It is clear that the average mass flux depends on the bulk concentration, the diffusion coefficient and the particle diameter. However, it is also necessary to include the fluid density, viscosity and the particle velocity relative to the fluid for the following reason. When the particle moves relative to the fluid, the generated flow pattern alters the distribution of the solute around the particles and thereby modifies the diffusion flux at the particle surface. The flow pattern, in turn, depends on the fluid viscosity, density and the flow velocity, and, therefore, the average mass flux could also depend on these.
 
-In \autoref{tab:masstransfertoparticle}, there are seven dimensional quantities and three dimensions. On this basis, we would expect that there are four dimensionless quantities. However, a further simplification can be made by distinguishing between the mass dimension in the mass transport (the solute mass) and that in the flow dynamics (the mass of the total fluid). The flux and the diffusion coefficient contain the mass of the solute, whereas the mass of the fluid (solute plus solvent) appears in the density and fluid viscosity. If the solute concentration does not affect the fluid density and viscosity, we can make a distinction between the mass dimension for the solute, $\phdim M_s$, from the mass dimension for the fluid, $\phdim M$. In the modified dimensions shown in \autoref{tab:masstransfertoparticle}, the mass flux and the diffusion coefficient depend on the solute mass $\phdim M_s$, while the density and viscosity depend on the fluid mass $\phdim M$. There are now four dimensions, $\elset{\phdim M, \phdim M_s, \phdim L, \phdim T}$, and therefore there are only three dimensionless quantities.
+In \cref{tab:masstransfertoparticle}, there are seven dimensional quantities and three dimensions. On this basis, we would expect that there are four dimensionless quantities. However, a further simplification can be made by distinguishing between the mass dimension in the mass transport (the solute mass) and that in the flow dynamics (the mass of the total fluid). The flux and the diffusion coefficient contain the mass of the solute, whereas the mass of the fluid (solute plus solvent) appears in the density and fluid viscosity. If the solute concentration does not affect the fluid density and viscosity, we can make a distinction between the mass dimension for the solute, $\phdim M_s$, from the mass dimension for the fluid, $\phdim M$. In the modified dimensions shown in \cref{tab:masstransfertoparticle}, the mass flux and the diffusion coefficient depend on the solute mass $\phdim M_s$, while the density and viscosity depend on the fluid mass $\phdim M$. There are now four dimensions, $\elset{\phdim M, \phdim M_s, \phdim L, \phdim T}$, and therefore there are only three dimensionless quantities.
 
 The first dimensionless group can be constructed by non-dimensionalizing the flux by the diffusion coefficient, the concentration difference and the particle diameter:
 \beq
@@ -276,7 +293,7 @@ In designing new processes, it is not sufficient to study the the process on the
 \end{example}
 
 \begin{solution}
-For a given impeller shape, it is necessary to estimate the power consumption for stirring at a given frequency $\freq$. The power consumption will, in general, depend on the shape and dimension of the impeller, as well as the vessel, as well as other details such as baffles, etc. If we keep the relative ratios of the lengths of the impeller, vessel, baffles, etc., a constant, then there is only one length scale in the problem, which we will consider the impeller diameter $\diam$. In addition, the power can also depend on the density of the fluid, $\dens$, the fluid viscosity $\dynvis$ and the frequency of rotation $\freq$. An additional dependence arises on the acceleration due to gravity $\grav$. This is because sometimes during stirring, the interface of the fluid raises at the edges and lowers in the middle. This upward motion due to centrifugal forces is balanced by a downward force due to gravity and so gravity could also be an important factor. This is because it is important to ensure that the dimensions of the interface (curvature, extent of depression at the center) are also in the same proportion as the impeller diameter. When considering the interface, the surface tension (normally denoted by the symbol $\surftens$) is also a relevant parameter. The surface tension has dimensions of force/length of energy/area; \ie, $\phdim M/\phdim T^2$. The relevant parameters with their dimensional dependencies are shown in \autoref{tab:impellerinreactor}.
+For a given impeller shape, it is necessary to estimate the power consumption for stirring at a given frequency $\freq$. The power consumption will, in general, depend on the shape and dimension of the impeller, as well as the vessel, as well as other details such as baffles, etc. If we keep the relative ratios of the lengths of the impeller, vessel, baffles, etc., a constant, then there is only one length scale in the problem, which we will consider the impeller diameter $\diam$. In addition, the power can also depend on the density of the fluid, $\dens$, the fluid viscosity $\dynvis$ and the frequency of rotation $\freq$. An additional dependence arises on the acceleration due to gravity $\grav$. This is because sometimes during stirring, the interface of the fluid raises at the edges and lowers in the middle. This upward motion due to centrifugal forces is balanced by a downward force due to gravity and so gravity could also be an important factor. This is because it is important to ensure that the dimensions of the interface (curvature, extent of depression at the center) are also in the same proportion as the impeller diameter. When considering the interface, the surface tension (normally denoted by the symbol $\surftens$) is also a relevant parameter. The surface tension has dimensions of force/length of energy/area; \ie, $\phdim M/\phdim T^2$. The relevant parameters with their dimensional dependencies are shown in \cref{tab:impellerinreactor}.
 %
 % ------------------------------------------------------------- PreTable
 \docpretable{bt}{0.9\textwidth}{ccl}%
@@ -347,7 +364,4 @@ Therefore, the ratio of the power required in the two configurations is
 \dfrac{\power\txt b}{\power\txt s} = 3160\dfrac{\dens\txt b}{\dens\txt s}\,.
 \eeq
 From the power requirement of the small reactor, the power estimate for the big reactor can be obtained using the above relation.
-=======
-%There are nine dimensionless groups and four dimensions in table 1.3, ap- parently necesitating five dimensionless groups. However, a further reduction is possible when there is no interconversion between heat energy (which is being transferred) and mechanical energy (which is driving the flow). In this case, it is possible to consider heat energy as a dimension H which is different from mechanical energy. There are now five dimensions, H, M, L, T and Υ, and a total of nine dimensional quantities in table 1.3. Therefore, there are only four dimensionless groups.
-
 \end{solution}
