--- a/transport/preambule/preambule.tex
+++ b/transport/preambule/preambule.tex
@@ -138,7 +138,7 @@ input-symbols = \pi\tau
         \small\textsf{#1}% text...quote
         \begin{flushright}
           % author, reference
-          {--- \sc\MakeLowercase{#2}}, {\small{#3}}
+          {--- \sc\MakeLowercase{#2}}, {\sc\MakeLowercase{#3}}
         \end{flushright}
       \end{minipage}
     \end{flushright}
